---
source: ch6/src/pass/register_allocation.rs
expression: result.to_string_pretty()
---
locals: {tmp.1: Tuple([Void]), tmp.2: Str, y.1: Tuple([Int, Bool, Void, Tuple([Void]), Str]), tmp.3: Bool, tmp.4: Bool, tmp.5: Int}
used_callee_saved_regs: {}
stack_space: 8 bytes
rootstack_space: 16 bytes
constants: {}

start:
    mov rdi, 8
    mov rsi, r15
    call rt_allocate
    mov qword [r11], rax
    mov qword [r11], 1
    mov qword [r15 - 8], r11
    mov rdi, 3
    mov rsi, const_1
    mov rdx, r15
    call rt_new_string
    mov qword [r15 - 16], rax
    mov rdi, 40
    mov rsi, r15
    call rt_allocate
    mov qword [r11], rax
    mov qword [r11], 6177
    mov qword [r11 + 8], 1
    mov qword [r11 + 16], 0
    mov qword [r11 + 24], qword [r15 - 8]
    mov qword [r11 + 32], qword [r15 - 16]
    mov qword [r15 - 8], r11
    mov r11, qword [r15 - 8]
    mov r11, qword [r11 + 16]
    mov qword [rbp - 8], r11
    xor qword [rbp - 8], 1
    mov r11, qword [r15 - 8]
    mov qword [r11 + 16], qword [rbp - 8]
    mov qword [rbp - 8], 5
    mov r11, qword [r15 - 8]
    mov qword [r11 + 8], qword [rbp - 8]
    jmp conclusion

